--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -67,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Fon
+      Heading Font: "Rubik Vinyl"
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: 
+      Paragraph Font: Roboto 
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
