--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       <a href="#">Personal Website</a>
       <a href="site-plan.html">Personal Siteplan</a>
     </nav>    
-    <p>Your Name Here - WDD130</p>   
+    <p>God's Peace Etaje - WDD130</p>   
 </body>
 </html>
