--- a/artistconnect/site-plan.html
+++ b/artistconnect/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Artistes' Hub</a>
+        <a href="#">Events</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Artistes' Hub<!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Events  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +124,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        As artists in Calgary, we know we have talent. We can't wait for people to listen to our original songs and or covers of songs but the question remains where to perform. Artiste Connect is here with a solution. Luckily there are a lot of opportunities here in Calgary looking for performing artistes like 'You'. Find events in need of performing artistes all around Calgary and contact the organizers directly to confirm your performance! If you're unsure about performing live, Artiste Connect can also help you find venues that provide open mic sessions. You can get valuable feedback and experience performing in front of an audience in a safe and supportive space. You can also find recording studios in the city, allowing you to record your own music and share it with the world. You can also connect with other artistes in the city, form collaborations and create something new. You can even join music groups and attend workshops to hone your craft. Taking part in festivals, concerts, and events is also an excellent way to gain more experience and exposure. With all these resources, you can create amazing content and share it with the world. You can even make money from your music if you put in the effort and hard work. Music is a great way to express yourself, so make sure to take advantage of all the opportunities available to you.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/photo-joyful-afro-american-woman-holds-hand-near-mouth-as-microphone-sings-songs-karaoke-being-happy-mood-wears-clothes-with-leopard-print.jpg" alt="Lady">
+        <img src="images/close-up-microphone-concert-stage-with-beautiful-lighting.jpg" alt="Mic">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Artistes' Hub</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Now is the time for the real deal. You will need to provide us with a brief biography that includes basic information, professional pictures of you, your experience, what type of instrument you play, what style you prefer, how long you have been in the craft, any of your original work or links to it, and how long you have been in the craft. Don't worry, you'll only be asked about this once when you apply. This information will be used to assess your qualifications and evaluate your profile. Your profile will be shared with the organizers of the events so it's important to make sure it's accurate and up-to-date. We recommend taking the time to craft a well-written and comprehensive biography. Make sure to include important details such as your education, work experience, and any awards or accolades you may have received. Finally, include a recent headshot and a link to your website or social media accounts. Additionally, this is a place where you can network with other artists. You can also use this area to promote your work, and connect with potential collaborators and employers. Make sure your profile stands out and reflects your personality and brand. Finally, keep your profile updated with new projects and accomplishments.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/medium-shot-man-making-music.jpg" alt="producer">
+        <img src="images/young-caucasian-jazz-musician-playing-saxophone-gradient-blue-purple-studio-neon-light.jpg" alt="saxaphone">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Events</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Artists can learn more about events on this page. Artistes can show interest in an event by saving the event. When they do that it will notify the organizers and the organizers can then reach out to them. In addition, the artistes can also directly contact the organizers of the event. It is imperative that the organizers provide enough information about their event, what it is about, the date and time, as well as the duration of the performance, the equipment they have available and the approximate amount of payment they plan to make. It's also important for the organizers to be clear about the requirements for the performance, such as the type of music they need and the expectations for the artist. It is essential for the organizers to provide feedback to the artists upon the completion of the event. The organizers should also provide the artist with any necessary resources to improve their performance. Finally, the organizers should make sure to show appreciation for the artist’s hard work. They can use the contact information provided on the page to get in touch. This will enable them to negotiate the terms and conditions of their performance. 
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/band-performing-studio.jpg" alt="band">
+        <img src="images/young-beautiful-woman-singer-stage-singing-into-microphone.jpg" alt="singer">
 
       </ul>
       <hr>
