--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Rivers</a>
+            <a href="rivers.html">Rivers</rivers></rivers></a>
             <a href="site-plan-rafting.html">Rates/Dates</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
