--- a/artistconnect/site-plan.html
+++ b/artistconnect/site-plan.html
@@ -135,7 +135,7 @@
       <p>
         Now is the time for the real deal. You will need to provide us with a brief biography that includes basic information, professional pictures of you, your experience, what type of instrument you play, what style you prefer, how long you have been in the craft, any of your original work or links to it, and how long you have been in the craft. Don't worry, you'll only be asked about this once when you apply. This information will be used to assess your qualifications and evaluate your profile. Your profile will be shared with the organizers of the events so it's important to make sure it's accurate and up-to-date. We recommend taking the time to craft a well-written and comprehensive biography. Make sure to include important details such as your education, work experience, and any awards or accolades you may have received. Finally, include a recent headshot and a link to your website or social media accounts. Additionally, this is a place where you can network with other artists. You can also use this area to promote your work, and connect with potential collaborators and employers. Make sure your profile stands out and reflects your personality and brand. Finally, keep your profile updated with new projects and accomplishments.
       </p>
-      <p>Images for the Page 2</p>
+      <p>Images for Artistes' Hub page</p>
         <img src="images/medium-shot-man-making-music.jpg" alt="producer">
         <img src="images/young-caucasian-jazz-musician-playing-saxophone-gradient-blue-purple-studio-neon-light.jpg" alt="saxaphone">
 
@@ -144,7 +144,7 @@
       <p>
         Artists can learn more about events on this page. Artistes can show interest in an event by saving the event. When they do that it will notify the organizers and the organizers can then reach out to them. In addition, the artistes can also directly contact the organizers of the event. It is imperative that the organizers provide enough information about their event, what it is about, the date and time, as well as the duration of the performance, the equipment they have available and the approximate amount of payment they plan to make. It's also important for the organizers to be clear about the requirements for the performance, such as the type of music they need and the expectations for the artist. It is essential for the organizers to provide feedback to the artists upon the completion of the event. The organizers should also provide the artist with any necessary resources to improve their performance. Finally, the organizers should make sure to show appreciation for the artist’s hard work. They can use the contact information provided on the page to get in touch. This will enable them to negotiate the terms and conditions of their performance. 
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the Events Page</p>
         <img src="images/band-performing-studio.jpg" alt="band">
         <img src="images/young-beautiful-woman-singer-stage-singing-into-microphone.jpg" alt="singer">
 
@@ -158,21 +158,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The wireframe covers everthing.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Screenshot 2023-04-08 152317.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Artistes' Hub</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The wireframe covers everthing.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Screenshot 2023-04-08 152726.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Events</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        The wireframe covers everthing.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Screenshot 2023-04-08 152902.png" alt="page 3 wireframe">
     </main>
   </body>
 
