New About me html

--- a/aboutme/index3.html
+++ b/aboutme/index3.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>God's Peace Etaje | WDD 130</title>
+    <title>All About Me</title>
 </head>
 <body>
-    <header>
-        <nav>    
-            <a href="#">Home</a>        
-            <a href="wwr/">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-          </nav>   
-    </header>
-    <main>
-    <h1>God's Peace Etaje | WDD 130</h1>
-    <img src="images/IMG-20221108-WA0002.jpg"  alt="Hello, my name is God's Peace Etaje" width="300" height="400" >
+    <h1>About Me</h1>
+    <img alt="Image of me?" src="images/IMG-20221108-WA0002.jpg" width="300" height="400" >
+    <h2>God's Peace Etaje</h2>
+    <h2>Preferred name: &#128156; Peace &#128156;</h2>
     <p>
         Hello everyone! My name is God's Peace Etaje. I am a daughter, sister, aunt and a very loyal friend. Additionally, I am a singer. Music is my life. Music of all kinds makes me happy, whether I'm singing, listening, or dancing.</p> 
     <p>
         I am pursuing a degree in applied technology because I am passionate about the digital world we live in today. I would love to be a consumer and creator of applications we will use in this generation. It is my dream to become a "front-end and back-end creator." </p>
     <p>I am excited to get to know everyone in the class and to learn from and with everyone!</p>
-    </main>
-    <footer>
-        <p>&#169;2023 &#128156; Preferred name: Peace &#128156; Calgary, Canada</p>
-    </footer>
 </body>
 </html>
