correcting the image

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
     <h1>God's Peace Etaje | WDD 130</h1>
-    <img src="images/IMG-20221108-WA0002.jpg"  alt="Hello, my name is God's Peace Etaje" width="300" height="400" >
+    <img src="images/profile.jpg"  alt="Hello, my name is God's Peace Etaje" width="200" >
     <p>
         Hello everyone! My name is God's Peace Etaje. I am a daughter, sister, aunt and a very loyal friend. Additionally, I am a singer. Music is my life. Music of all kinds makes me happy, whether I'm singing, listening, or dancing.</p> 
     <p>
