--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -9,8 +9,8 @@
     <header>
         <nav>    
             <a href="#">Home</a>        
-            <a href="wwr/">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="wwr/">Rafting Site</a>
+            <a href="wwr/site-plan-rafting.html">Rafting Site plan</a>
           </nav>   
     </header>
     <main>
@@ -23,7 +23,7 @@
     <p>I am excited to get to know everyone in the class and to learn from and with everyone!</p>
     </main>
     <footer>
-        <p>&#169;2023 &#128156; Preferred name: Peace &#128156; Calgary, Canada</p>
+        <p>&#169;2024 &#128156; Preferred name: Peace &#128156; Calgary, Canada</p>
     </footer>
 </body>
 </html>
