--- a/about-me/index.html
+++ b/about-me/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Godspeace Etaje's BYU-Idaho online WDD 130 course home page">
     <meta name="author" content="Godspeace Etaje"> 
 
-    <link rel="stylesheet" href="styles/styles.css"
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
