--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Water Away Site Plan</h1>
     <h2>Peace Etaje</h2>
-    <h2>WDD 130-03</h2> 
+    <h2>WDD 130</h2> 
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
