--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,47 +1,38 @@
 
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
   <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Rafting Site Plan | God's Peace Etaje</title>
+    <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
+    <meta name="author" content="Godspeace Etaje"> 
+    <link rel="stylesheet" href="styles/site-plan-rafting.css">
   <title>Site Plan</title>
   <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
 </head>
 
 <body>
   <header>
-    <h1>Water Away Site Plan</h1>
-    <h2>Peace Etaje</h2>
-    <h2>WDD 130</h2> 
-    <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
+    <h1>Rafting Site Plan</h1>
+    <h2>God's Peace Etaje</h2>
   </header>
+
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
-    <hr />
     <h2>Overview</h2>
+
     <h3>Purpose</h3>
     <p>This will be the official website for the white water rafting company, 'Water Away'. This website will inform customers what water rafting is about; it will include the company's vision and mission statements, and an introduction to the company's staff. Additionally, it will have pictures of the different rafters available and the packages (the price, the seating capacity, the duration of time, basically the 'Water Away Experience') they come with, how to pay for them and a virtual tour of the rafters. There will also be safety precautions associated with the rafters like weather conditions around the area and water currents, customer service and accessibility.</p>
-    <!-- change this -->
-
     <h3>Audience</h3>
     <p>Our target customers are vacation companies. They can add our company to their vacation package because we will be stationed in a vacation area surrounded by hotels, Airbnb etc. This will help us directly reach out to people who want to have fun and try the rafting experience. They are likely to access the site using their device. The website will also be available for the public to access.</p>
-    <!-- change this -->
-
-    <hr />
+   
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/splash.png" alt="Logo image" />
+    <img src="images/splash.png" alt="Rafting Site Logo" />
     <hr />
     <h2>Style Guide</h2>
 
-    <!-- ------------------------Steps 6-9------------------------------ -->
-
     <h3>Color Palette</h3>
-    <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
-    <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
-    <p>Palette URL:</p>
     <a href="https://coolors.co/ccd4e3-6c83ae-0c57a4-87a7ca-7598c5-616894-436096-9494b3-ffffff"
       target="_blank">https://coolors.co/ccd4e3-6c83ae-0c57a4-87a7ca-7598c5-616894-436096-9494b3-ffffff</a>
 
@@ -52,7 +43,7 @@
         <th>Accent 1</th>
         <th>Accent 2</th>
       </tr>
-      <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+      
       <tr>
         <td class="primary">#616894</td>
         <td class="secondary">#436096</td>
@@ -61,27 +52,23 @@
       </tr>
     </table>
 
-    <!-- ------------------------Steps 10-12------------------------------ -->
 
     <h3>Typography</h3>
-    <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: "Rubik Vinyl"
-      <!-- change this -->
+      Headings Example Font Font: "Rubik Vinyl"
     </h4>
     <h4>
       Paragraph Font: Roboto 
-      <!-- change this -->
     </h4>
-    <h3>Normal paragraph example</h3>
+    <h3>Normal Text/Paragraph Example Font</h3>
     <p>
       The best Whitewater Rafting in Colorado, White Water Rafting Company
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
       Springs. Since 1974, we have been family owned and operated, rafting the
       Shoshone section of Glenwood Canyon and beyond.
     </p>
-    <h3>Colored paragraph example</h3>
+    <h4>Colored Callout Example Font</h4>
     <p class="colored">
       Trips vary from mild and great for families, to trips exclusively for
       physically fit and experienced rafters. No matter what type of river
@@ -89,22 +76,19 @@
       happen for you.
     </p>
 
-    <!-- ------------------------Step 13------------------------------ -->
-
     <h3>Navigation</h3>
-    <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">About Us</a>
+      <a href="#">Trips</a>
       <a href="#">Contact Us</a>
     </nav>
-    <hr />
-    <h2>Site Map</h2>
+
+    <h2>Wireframes</h2>
     <div class="sitemap">
-      <div class="sm-home">Home</div>
+      <div class="sm-home">Home Page</div>
       <div class="sm-page2">
-        [Page2]
-        <!-- this page will have a name later -->
+        About Us
       </div>
       <div class="sm-page3">Contact Us</div>
 
@@ -114,16 +98,14 @@
     </div>
     <hr />
     <h2>Wireframes</h2>
-    <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
-
-    <h3>Home</h3>
-
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
-
-    <h3>[Page 2]</h3>
-
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <h3>Home Page Wireframe</h3>
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe Example Design" width="700">
+    <h3>About Us Page Wireframe</h3>
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="About Us page wireframe Design" width="700">
   </main>
+  <footer>
+    <p>&#169;2024 &#128156; Rafting Site Document &#128156; God's Peace Etaje &#128156; WDD 130</p>
+</footer>
 </body>
 
 </html>
