--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--25 January 2024-->
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -9,14 +10,17 @@
   <meta name="author" content="Godspeace Etaje"> 
 
   <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
       <nav>     
-        <a href="">Home</a>        
+        <a href="home.html">Home</a>        
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="https://www.linkedin.com/feed/">Profile</a>
       </nav>    
     </header>
     
@@ -24,13 +28,19 @@
       <h1>God's Peace Etaje | WDD 130</h1>
       <img src="images/profile.jpg"  alt="Hello, my name is God's Peace Etaje" width="200" >
       <p>
-          Hello everyone! My name is God's Peace Etaje. I a Nigerian who resides in Canada. I am a daughter, sister, aunt and a very loyal friend. Additionally, I am a singer. Music is my life. Music of all kinds makes me happy, whether I'm singing, listening, or dancing.</p> 
-      <p>
-          I am pursuing a degree in applied technology because I am passionate about the digital world we live in today. I would love to be a consumer and creator of applications we will use in this generation. It is my dream to become a "front-end and back-end creator." </p>
-      <p>I am excited to get to know everyone in the class and to learn from and with everyone!</p>
-      </main>
+          Hello everyone! My name is God's Peace Etaje. I a Nigerian who resides in Canada. I am a daughter, sister, aunt and a very loyal friend. Additionally, I am a singer. Music is my life. Music of all kinds makes me happy, whether I'm singing, listening, or dancing.
+          I am pursuing a degree in applied technology because I am passionate about the digital world we live in today. I would love to be a consumer and creator of applications we will use in this generation. It is my dream to become a "front-end and back-end creator."
+          I am excited to get to know everyone in the class and to learn from and with everyone!</p>
+          
+          <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/calgary-alberta-temple?lang=eng"target="_blank">Calgary Alberta Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/cardston-alberta-temple?lang=eng"target="_blank">Cardston Alberta Temple</a></li>
+            <li><a href="https://churchofjesuschristtemples.org/salt-lake-temple/"target="_blank">Cardston Alberta Temple</a></li>
+          </ul>
 
-      <aside>
+        </main>
+
+      <aside class="box">
           <h2>Nigeria</h2>
           <img src="images/Nigeria.jpg" alt="Nigeria Landscape">
           <p>"Nigeria, often called the "Giant of Africa," is a country of diverse geography, including deserts, plains, swamps, mountains, and jungles. It is home to over 250 ethnic groups speaking 500 distinct languages, making it a patchwork of distinctive cultures. With a population of over 222 million, it is the most populous country in Africa. Nigeria is a federal republic comprising 36 states and the Federal Capital Territory, with Abuja as its capital. - wiki" </p>
