--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <a href="home.html">Home</a>        
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="https://www.linkedin.com/feed/">Profile</a>
+        <a href="https://www.linkedin.com/feed/">Linkedln</a>
+        <a href="https://www.facebook.com/"> Facebook</a>
       </nav>    
     </header>
     
@@ -49,7 +50,7 @@
       <footer>
           <p>&#169;2024 &#128156; Preferred name: Peace &#128156; Calgary, Canada</p>
       </footer>
-    <p>God's Peace Etaje - WDD130</p>   
+
 </body>
 
 </html>
