--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -2,14 +2,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rafting Site Plan | God's Peace Etaje</title>
     <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
     <meta name="author" content="Godspeace Etaje"> 
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
-  <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
+
 </head>
 
 <body>
@@ -28,8 +29,8 @@
    
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/splash.png" alt="Rafting Site Logo" />
-    <hr />
+    <img src="images/splash.png" alt="Rafting Site Logo">
+    <hr>
     <h2>Style Guide</h2>
 
     <h3>Color Palette</h3>
@@ -96,7 +97,7 @@
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
     </div>
-    <hr />
+    <hr>
     <h2>Wireframes</h2>
     <h3>Home Page Wireframe</h3>
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe Example Design" width="700">
