--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -66,7 +66,10 @@
     <p>
       The best Whitewater Rafting in Colorado, White Water Rafting Company
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
+      Springs.  
+    </p>
+      <p>
+      Since 1974, we have been family owned and operated, rafting the
       Shoshone section of Glenwood Canyon and beyond.
     </p>
     <h4>Colored Callout Example Font</h4>
