home page assignment

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
       <nav>     
-        <a href="home.html">Home</a>        
+        <a href="#">Home</a>        
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="https://www.linkedin.com/feed/">Linkedln</a>
