finish this assignmnet

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,70 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>God's Peace | Water Away | Home</title>
+    <title>Godspeace | Water Away | Home</title>
+    <meta name="description" content="Peace Etaje's BYU-Idaho WDD 130 course Rafting Site">
+    <meta name="author" content="Godspeace Etaje">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
+
 <body>
     <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Branch Out Logo">
+            <img src="images/logo.png" alt="Water Away Logo">
         </a>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-
-    <main>
-        <div class="hero">
-            <img src="images/hero.png" alt="People enjoying white water rafting">
-            <h1>Water Away White Water Rafting</h1>
-            <article>
-                <img src="images/people.png" alt="Happy Client">
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. Our target customers are vacation companies. They can add our company to their vacation package because we will be stationed in a vacation area surrounded by hotels, Airbnb etc. This will help us directly reach out to people who want to have fun and try the rafting experience. They are likely to access the site using their device. The website will also be available for the public to access.</p>
+    <main class="hero">
+            <img src="images/hero(1).jpg" alt="People enjoying white water rafting" style="width:100%" >
+            <h1 class="Rafting Company">Water Away White Water Rafting</h1>
+           <article>
+            <div class="wrap">
+                <img src="images/happy-client.png" alt="Happy Client">
+                <p>More Than Just The Thrill.Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             </article>
-        </div>
-            <section>
-             <h2>History</h2>
-             <p> 
-                Water Away White Water Rafting Company has been providing the best whitewater rafting experience in Colorado since 1974. As a family-owned and operated business, we take pride in offering exhilarating rafting trips on the Colorado and Roaring Fork Rivers in Glenwood Springs.
-                Our location in Glenwood Springs allows us to explore the stunning Shoshone section of Glenwood Canyon and beyond. We offer a variety of trips, catering to families looking for a milder experience as well as to physically fit, experienced rafters seeking more challenging adventures. 
-                We are conveniently located an hour or less from Aspen, Snowmass, Eagle, Avon, Beaver Creek, Vail, and Grand Junction, making it easy for visitors from various areas to access our rafting experiences. Whether you're looking for a half-day adventure or a full-day excursion.
-            </p>
-            </section>
-            <section>
+        <section>
+            <h2>History</h2>
+     <p> 
+        Water Away White Water Rafting Company has been providing the best whitewater rafting experience in Colorado since 1974. We offer a variety of trips, catering to families looking for a milder experience as well as to physically fit, experienced rafters seeking more challenging adventures. We are conveniently located an hour or less from Aspen, Snowmass, Eagle, Avon, Beaver Creek, Vail, and Grand Junction, making it easy for visitors from various areas to access our rafting experiences.
+    </p>
+    </section>
+    <section>
             <h2>Adventure Awaits You!</h2>
-            <section class="Peaceful-Rapids">
             <img class="Peaceful Rapids" src="images/river-1.jpg" alt="Bear River">
-                <p>Peaceful Rapids</p>
-            </section>
-            <section class="rivers-card"></section>
+            <p>Clients Rafting</p>
             <img class="card-img" src="images/rafting52_600.jpg" alt="river in forest">
-                <p>Colorado River</p>
-            </section>
-            <section class="camping-card">
-                <img class="card-img" src="images/river-2.jpg" alt="Bear River">
-                <p>Bear River</p>
-            </section>
-            <section class="rapids-card"></section>
+            <p>Workers Rafting</p>
+            <img class="card-img" src="images/river-2.jpg" alt="Bear River">
+            <p>Peaceful Rapids</p>
             <img class="card-img" src="images/rapids.jpg" alt="Smokey River">
-            <p>Smokey River</p> 
-        </section>
+            <p>Safety</p> 
             <img class="river-3" src="images/river-3.jpg" alt="Boise river">
-            <p> Boise River</p>
-            </section>
+            <p> Nature</p>
+     </section>
     </main>  
-
     <footer>
         <p>&#169;2024 &#128156; Water Away &#128156; Peace </p>
-        <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="images/facebook.png" alt="facebook icon">
             </a>
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
@@ -72,9 +60,7 @@
             <a href="https://twitter.com" target="_blank">
                 <img src="images/x.png" alt="twitter icon">
             </a>
-        </div>
     </footer>
-
 </body>
 
 </html>
