--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Godspeace | Water Away | Home</title>
-    <meta name="description" content="Peace Etaje's BYU-Idaho WDD 130 course Rafting Site">
+    <title>Godspeace | Water Away Rafting | About </title>
+    <meta name="description" content="Godspeace Water Away Rafting Site">
     <meta name="author" content="Godspeace Etaje">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -13,7 +13,6 @@
 <body>
     <header>
             <img src="images/logo.png" alt="Water Away Logo">
-        </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -21,14 +20,18 @@
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
+    
     <main class="hero">
             <img src="images/hero(1).jpg" alt="People enjoying white water rafting" style="width:100%" >
             <h1 class="Rafting Company">Water Away White Water Rafting</h1>
            <article>
             <div class="wrap">
+                <h5> Happy Client</h5>
                 <img src="images/happy-client.png" alt="Happy Client">
                 <p>More Than Just The Thrill.Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+            </div>
             </article>
+
         <section>
             <h2>History</h2>
      <p> 
@@ -49,6 +52,7 @@
             <p> Nature</p>
      </section>
     </main>  
+
     <footer>
         <p>&#169;2024 &#128156; Water Away &#128156; Peace </p>
             <a href="https://facebook.com" target="_blank">
