--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Godspeace | Water Away Rafting | About </title>
+    <title> About Us - Water Away Rafting</title>
     <meta name="description" content="Godspeace Water Away Rafting Site">
     <meta name="author" content="Godspeace Etaje">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -20,24 +20,21 @@
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-    
+
     <main class="hero">
-            <img src="images/hero(1).jpg" alt="People enjoying white water rafting" style="width:100%" >
+            <img src="images/hero(1).jpg" alt="People enjoying white water rafting">
             <h1 class="Rafting Company">Water Away White Water Rafting</h1>
            <article>
             <div class="wrap">
-                <h5> Happy Client</h5>
                 <img src="images/happy-client.png" alt="Happy Client">
                 <p>More Than Just The Thrill.Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             </div>
-            </article>
-
-        <section>
+        </article>
             <h2>History</h2>
      <p> 
         Water Away White Water Rafting Company has been providing the best whitewater rafting experience in Colorado since 1974. We offer a variety of trips, catering to families looking for a milder experience as well as to physically fit, experienced rafters seeking more challenging adventures. We are conveniently located an hour or less from Aspen, Snowmass, Eagle, Avon, Beaver Creek, Vail, and Grand Junction, making it easy for visitors from various areas to access our rafting experiences.
     </p>
-    </section>
+
     <section>
             <h2>Adventure Awaits You!</h2>
             <img class="Peaceful Rapids" src="images/river-1.jpg" alt="Bear River">
