--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 <body>
     <header>
       <nav>     
-        <a href="#">Home</a>        
-        <a href="wwr/index.html">White Water Rafting Website</a>
+        <a href="index.html">Home</a>        
+        <a href="wwr/about.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="https://www.linkedin.com/feed/">Linkedln</a>
         <a href="https://www.facebook.com/"> Facebook</a>
       </nav>    
     </header>
     
+  <div class="grid"></div>
     <main>
       <h1>God's Peace Etaje | WDD 130</h1>
       <img src="images/profile.jpg"  alt="Hello, my name is God's Peace Etaje" width="200" >
@@ -46,6 +47,7 @@
           <img src="images/Nigeria.jpg" alt="Nigeria Landscape">
           <p>"Nigeria, often called the "Giant of Africa," is a country of diverse geography, including deserts, plains, swamps, mountains, and jungles. It is home to over 250 ethnic groups speaking 500 distinct languages, making it a patchwork of distinctive cultures. With a population of over 222 million, it is the most populous country in Africa. Nigeria is a federal republic comprising 36 states and the Federal Capital Territory, with Abuja as its capital. - wiki" </p>
       </aside>
+   </div>
 
       <footer>
           <p>&#169;2024 &#128156; Preferred name: Peace &#128156; Calgary, Canada</p>
