--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!--25 January 2024-->
+<!--12 February 2024-->
 <html lang="en-US">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>God's Peace Etaje | WDD 130</title>
+  <title>Godspeace Etaje | WDD 130</title>
   <meta name="description" content="Godspeace Etaje's BYU-Idaho online WDD 130 course home page">
   <meta name="author" content="Godspeace Etaje"> 
 
@@ -25,32 +25,32 @@
       </nav>    
     </header>
     
-  <div class="grid"></div>
+  <div class="grid">
     <main>
-      <h1>God's Peace Etaje | WDD 130</h1>
+      <h1>Godspeace Etaje | WDD 130</h1>
       <img src="images/profile.jpg"  alt="Hello, my name is God's Peace Etaje" width="200" >
       <p>
           Hello everyone! My name is God's Peace Etaje. I a Nigerian who resides in Canada. I am a daughter, sister, aunt and a very loyal friend. Additionally, I am a singer. Music is my life. Music of all kinds makes me happy, whether I'm singing, listening, or dancing.
           I am pursuing a degree in applied technology because I am passionate about the digital world we live in today. I would love to be a consumer and creator of applications we will use in this generation. It is my dream to become a "front-end and back-end creator."
-          I am excited to get to know everyone in the class and to learn from and with everyone!</p>
-          
-          <ul class="box indent">
+          I am excited to get to know everyone in the class and to learn from and with everyone!
+      </p>
+
+        <ul class="box indent">
             <li><a href="https://www.churchofjesuschrist.org/temples/details/calgary-alberta-temple?lang=eng" target="_blank">Calgary Alberta Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/cardston-alberta-temple?lang=eng" target="_blank">Cardston Alberta Temple</a></li>
             <li><a href="https://churchofjesuschristtemples.org/salt-lake-temple/" target="_blank">Cardston Alberta Temple</a></li>
           </ul>
-
         </main>
 
       <aside class="box">
-          <h2>Nigeria</h2>
+          <h2>Lagos</h2>
           <img src="images/Nigeria.jpg" alt="Nigeria Landscape">
           <p>"Nigeria, often called the "Giant of Africa," is a country of diverse geography, including deserts, plains, swamps, mountains, and jungles. It is home to over 250 ethnic groups speaking 500 distinct languages, making it a patchwork of distinctive cultures. With a population of over 222 million, it is the most populous country in Africa. Nigeria is a federal republic comprising 36 states and the Federal Capital Territory, with Abuja as its capital. - wiki" </p>
       </aside>
    </div>
 
       <footer>
-          <p>&#169;2024 &#128156; Preferred name: Peace &#128156; Calgary, Canada</p>
+          <p>&#169;2024 &#128156; Preferred name: Peace &#128156; Lagos, Nigeria</p>
       </footer>
 
 </body>
