--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,9 @@
 
 <body>
     <header>
+        <div class="logo"> 
         <img src="images/logo.png" alt="Water Away Logo">
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -30,23 +32,29 @@
                   <p>More Than Just The Thrill.Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             </div>
         </article>
-        <h2>History</h2>
-        <p>Water Away White Water Rafting Company has been providing the best whitewater rafting experience in Colorado since 1974. We offer a variety of trips, catering to families looking for a milder experience as well as to physically fit, experienced rafters seeking more challenging adventures. We are conveniently located an hour or less from Aspen, Snowmass, Eagle, Avon, Beaver Creek, Vail, and Grand Junction, making it easy for visitors from various areas to access our rafting experiences.</p>
 
+        <section class="history">
+        <h2>History</h2>
+        <p> 
+           Water Away White Water Rafting Company has been providing the best whitewater rafting experience in Colorado since 1974. We offer a variety of trips, catering to families looking for a milder experience as well as to physically fit, experienced rafters seeking more challenging adventures. We are conveniently located an hour or less from Aspen, Snowmass, Eagle, Avon, Beaver Creek, Vail, and Grand Junction, making it easy for visitors from various areas to access our rafting experiences.
+        </p>
+    </section>
+    
     <section>
-        <h2>Adventure Awaits You!</h2>
-        <img class="Peaceful Rapids" src="images/river-1.jpg" alt="Bear River">
-        <p>Clients Rafting</p>
-        <img class="card-img" src="images/rafting52_600.jpg" alt="river in forest">
-        <p>Workers Rafting</p>
-        <img class="card-img" src="images/river-2.jpg" alt="Bear River">
-        <p>Peaceful Rapids</p>
-        <img class="card-img" src="images/rapids.jpg" alt="Smokey River">
-        <p>Safety</p> 
-        <img class="river-3" src="images/river-3.jpg" alt="Boise river">
-        <p> Nature</p>
+            <h2>Adventure Awaits You!</h2>
+            <img class="Peaceful Rapids" src="images/river-1.jpg" alt="Bear River">
+            <p>Clients Rafting</p>
+            <img class="card-img" src="images/rafting52_600.jpg" alt="river in forest">
+            <p>Workers Rafting</p>
+            <img class="card-img" src="images/river-2.jpg" alt="Bear River">
+            <p>Peaceful Rapids</p>
+            <img class="card-img" src="images/rapids.jpg" alt="Smokey River">
+            <p>Safety</p> 
+            <img class="river-3" src="images/river-3.jpg" alt="Boise river">
+            <p> Nature</p>
      </section>
-    </main>  
+
+   </main>  
 
     <footer>
         <p>&#169;2024 &#128156; Water Away &#128156; Peace </p>
