--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,24 +34,44 @@
         </article>
 
         <section class="history">
-        <h2>History</h2>
-        <p> 
-           Water Away White Water Rafting Company has been providing the best whitewater rafting experience in Colorado since 1974. We offer a variety of trips, catering to families looking for a milder experience as well as to physically fit, experienced rafters seeking more challenging adventures. We are conveniently located an hour or less from Aspen, Snowmass, Eagle, Avon, Beaver Creek, Vail, and Grand Junction, making it easy for visitors from various areas to access our rafting experiences.
-        </p>
-    </section>
+          <h2>History</h2>
+          <div class="content-container">
+            <div class="text-container">
+                <p>Water Away White Water Rafting Company has been providing the best whitewater rafting experience in Colorado since 1974. We offer a variety of trips, catering to families looking for a milder experience as well as to physically fit, experienced rafters seeking more challenging adventures. </p>
+            </div>
+            <div class="image-container">
+                <img src="images/camping.jpg" alt="History Image">
+            </div>
+        <div class="text-container">
+            <p>We are conveniently located an hour or less from Aspen, Snowmass, Eagle, Avon, Beaver Creek, Vail, and Grand Junction, making it easy for visitors from various areas to access our rafting experiences.With our central location, we aim to provide easy accessibility for all adventure seekers.</p>
+       </div>
+    </div>
+</section>
     
-    <section>
-            <h2>Adventure Awaits You!</h2>
-            <img class="Peaceful Rapids" src="images/river-1.jpg" alt="Bear River">
-            <p>Clients Rafting</p>
-            <img class="card-img" src="images/rafting52_600.jpg" alt="river in forest">
-            <p>Workers Rafting</p>
-            <img class="card-img" src="images/river-2.jpg" alt="Bear River">
-            <p>Peaceful Rapids</p>
-            <img class="card-img" src="images/rapids.jpg" alt="Smokey River">
-            <p>Safety</p> 
-            <img class="river-3" src="images/river-3.jpg" alt="Boise river">
-            <p> Nature</p>
+    <section class="adventures">
+        <h2>Adventure Awaits You</h2>
+        <div class="adventures-container">
+            <figure>
+                <img src="images/river-1.jpg" alt="Client Rafting">
+                <figcaption>Client Rafting</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting52_600.jpg" alt="Workers Rafting">
+                <figcaption>Workers Rafting</figcaption>
+            </figure>
+            <figure>
+                <img src="images/river-2.jpg" alt="Peaceful Rapids">
+                <figcaption>Peaceful Rapids</figcaption>
+            </figure>
+            <figure>
+                <img  src="images/rapids.jpg" alt="Safety">
+                <figcaption>Safety</figcaption>
+            </figure>
+            <figure>
+                <img src="images/river-3.jpg" alt="Nature">
+                <figcaption>Nature</figcaption>
+            </figure>
+        </div>
      </section>
 
    </main>  
