--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo"> 
+    <header class="header-grid">
+      <div class="logo"> 
         <img src="images/logo.png" alt="Water Away Logo">
-        </div>
+      </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
