--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <header>
       <nav>     
-        <a href="index.html">Home</a>        
+        <a href="index.html">Home</a>     
+        <a href="quiz.html">Quiz</a>   
         <a href="wwr/about.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="https://www.linkedin.com/feed/">Linkedln</a>
