--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <nav>     
         <a href="index.html">Home</a>     
         <a href="quiz.html">Quiz</a>   
-        <a href="wwr/about.html">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="wwr/about.html">Rafting Website</a>
+        <a href="wwr/site-plan-rafting.html">Rafting Siteplan</a>
         <a href="https://www.linkedin.com/feed/">Linkedln</a>
         <a href="https://www.facebook.com/"> Facebook</a>
       </nav>    
