--- a/quiz.html
+++ b/quiz.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML and CSS Quiz</title>
-    <meta name="description" content="Godspeace Etaje's BYU-Idaho online WDD 130 course Quiz">
+    <meta name="description" content="Godspeace Etaje's BYU-Idaho online WDD 130 course HTML and CSS Quiz">
     <meta name="author" content="Godspeace Etaje"> 
-
-  <link rel="stylesheet" href="styles/quiz.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/quiz.css">
 </head>
 
 <body>
