--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,6 +15,7 @@
       <div class="logo"> 
         <img src="images/logo.png" alt="Water Away Logo">
       </div>
+      <h1>Contact Us</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -26,13 +27,14 @@
     <main>
       <div class="info-box">
         <section class="contact-info">
-            <h2>Contact Us</h2>
+            <h2>Company Information</h2>
             <p><strong>Address:</strong> 123 royal Gorge, Colorado, USA</p>
             <p><strong>Phone:</strong> (123) 456-7890</p>
             <p><strong>Email:</strong> <a href="mailto:info@waterawayrafting.com">info@waterawayrafting.com</a></p>
        </section>
 
   <section class="contact-form">
+    <h3>Contact Form</h3>
     <form action="#" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
@@ -43,15 +45,15 @@
         <fieldset>
           <legend>Purpose of Message:</legend>
           <label>
-            <input type="radio" name="purpose" value="General Inquiry" required>
+            <input type="radio" id="general-inquiry" name="purpose" value="General Inquiry" required>
             General Inquiry
           </label>
           <label>
-            <input type="radio" name="purpose" value="Reservation Question">
+            <input type="radio" id="reservation-question" name="purpose" value="Reservation Question">
             Reservation Question
           </label>
           <label>
-            <input type="radio" name="purpose" value="Website Suggestion">
+            <input type="radio" id="website-suggestion" name="purpose" value="Website Suggestion">
             Website Suggestion
         </label>
         </fieldset>
@@ -60,7 +62,7 @@
         <textarea id="message" name="message" rows="4" required></textarea>
 
         <label>
-          <input type="checkbox" name="newsletter" value="subscribe">
+          <input type="checkbox" id="newsletter" name="newsletter" value="subscribe">
           Please subscribe me to the monthly newsletter
         </label>
 
@@ -96,7 +98,7 @@
         
     <footer>
         <p>&#169;2024 &#128156; Water Away &#128156; Peace </p>
-        <a href="https://app.moqups.com/fSBojw3phUwAzpyF4G1kJnLUvLqcqrHM/edit/page/ac4ee4b31">View Contact Us Wireframe</a>
+        <a href="images/Contact_Us_Form.png" target="-blank">View Contact Us Wireframe</a>
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="facebook icon">
             </a>
