--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -66,7 +66,7 @@
           Please subscribe me to the monthly newsletter
         </label>
 
-        <button type="submit">Submit</button>
+        <button type="submit">Enter</button>
       </form>
     </section>
 
