--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           <p>&#169;2024 &#128156; Preferred name: Peace &#128156; Lagos, Nigeria</p>
       </footer>
 
+      <!--20th February 2024-->
+
 </body>
 
 </html>
