--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           <p>&#169;2024 &#128156; Preferred name: Peace &#128156; Lagos, Nigeria</p>
       </footer>
 
-      <!--20th February 2024-->
+      <!--
+      20th February 2024
+      -->
 
 </body>
 
