--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> About Us - Water Away Rafting</title>
-    <meta name="description" content="Godspeace Water Away Rafting Site">
+    <title> About Us - Water Away Rafting Site</title>
+    <meta name="description" content="Godspeace Water Away Rafting Site About Us Page">
     <meta name="author" content="Godspeace Etaje">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -17,7 +17,7 @@
       </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a class="current" href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
