--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Contact - Water Away Rafting</title>
-    <meta name="description" content="Godspeace Water Away Rafting Site Contact Page">
+    <title> Contact Us Page - Water Away Rafting Site</title>
+    <meta name="description" content="Godspeace Water Away Rafting Site Contact Us Page">
     <meta name="author" content="Godspeace Etaje">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -66,7 +66,7 @@
           Please subscribe me to the monthly newsletter
         </label>
 
-        <button type="submit">Enter</button>
+        <button type="submit">Sign Up</button>
       </form>
     </section>
 
