--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,6 +29,7 @@
             <article>
                <div class="wrap">
                   <img src="images/happy-client.png" alt="Happy Client">
+                  <h3>Happy Client</h3>
                   <p>More Than Just The Thrill.Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             </div>
         </article>
