--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -60,7 +60,7 @@
           </section>
 
         
-        <section class="trip-table">
+        <div class="trip-table">
             <table>
             <caption>All Available Trips</caption>
             <thead>
@@ -91,7 +91,7 @@
                     <td>$800</td>
                 </tr>
             </table>
-        </section>
+          </div>
 
         <section class="contact">
             <h2>Contact Us</h2>
